hledger/test/errors/payees.j
#!/usr/bin/env -S hledger check payees -f

account a
commodity A

2022/1/1 p
  (a)  A 1
